Fix subscribers part in ProfileView

--- a/ForumProject/Views/Profile/ProfileView.cshtml
+++ b/ForumProject/Views/Profile/ProfileView.cshtml
@@ -231,8 +231,8 @@
                             <div class="image"><img src="~/Content/images/@subscriber.MainPhoto" /></div>
                         </a>
                     </div>
-                    <a href="/Profile/ProfileView/@subscriber.Id"><span id="publisher_name">@subscriber.Name</span></a>
-                    <span id="publisher_level">Level: @subscriber.LevelInfo.Name</span>
+                    <a href="/Profile/ProfileView/@subscriber.Id"><span class="publisher_name">@subscriber.Name</span></a>
+                    <span class="publisher_level">Level: @subscriber.LevelInfo.Name</span>
                 </div>
             }
         </div>
