--- a/ForumProject/Views/Profile/ProfileView.cshtml
+++ b/ForumProject/Views/Profile/ProfileView.cshtml
@@ -1,5 +1,5 @@
-﻿@using ForumProject.Models.Data
-@model Users
+﻿@using ForumProject.Models.ViewModels
+@model ProfileViewModel
 
 @section Scripts{    
     @Scripts.Render("~/Scripts/jquery-1.10.2.js")
