--- a/ForumProject/Views/Record/AddRecord.cshtml
+++ b/ForumProject/Views/Record/AddRecord.cshtml
@@ -1,5 +1,5 @@
-﻿@using ForumProject.Models.Data;
-@model Users
+﻿@using ForumProject.Models.ViewModels;
+@model UserAddsRecordViewModel
 
 @section Scripts{
     @Scripts.Render("~/Scripts/all.js")
