--- a/ForumProject/Views/Topics/Subtopics.cshtml
+++ b/ForumProject/Views/Topics/Subtopics.cshtml
@@ -1,5 +1,5 @@
-﻿@using ForumProject.Models.Data
-@model IEnumerable<Subtopics>
+﻿@using ForumProject.Models.ViewModels
+@model IEnumerable<SubtopicViewModel>
 
 @section Styles{
     <link href="@Url.Content("~/Content/Sidebar.css")" rel="stylesheet" type="text/css" />
