Start adding Identity

--- a/ForumProject/Content/Template.css
+++ b/ForumProject/Content/Template.css
@@ -195,6 +195,26 @@ footer {
     float: right;
 }
 
-.validation-summary-errors{
-    color: red;
+.field-validation-error {
+    color: #b94a48;
+}
+ 
+.field-validation-valid {
+    display: block;
+}
+ 
+input.input-validation-error {
+    border: 1px solid #b94a48;
+}
+ 
+input[type="checkbox"].input-validation-error {
+    border: 0 none;
+}
+ 
+.validation-summary-valid {
+    display: none;
+}
+
+.validation-summary-errors {
+    color: #b94a48;
 }
