--- a/ForumProject/Views/Profile/Delete.cshtml
+++ b/ForumProject/Views/Profile/Delete.cshtml
@@ -11,6 +11,7 @@
     <div id="deleting_block">
         <p>Are you sure you want to delete the profile?</p>
         <form method="post" action="/Auth/Delete">
+            @Html.AntiForgeryToken()
             <input type="submit" id="delete_btn" value="Yes" />
         </form>
         <a href="/Profile/ProfileView/@ViewBag.UserId">Cancel</a>
